--- a/_pages/about.html
+++ b/_pages/about.html
@@ -8,7 +8,7 @@ redirect_from:
 ---
 
 <p>
-  I am a Research Assistant at Queen Mary University of London. My research interests include human-robot interaction and computer vision for robotics. Previously, I was a PhD student at Queen Mary University of London working with 
+  I am a Research Assistant at Queen Mary University of London working on VLM based referring expression segmenation. My research interests include human-robot interaction and computer vision for robotics. Previously, I was a PhD student at Queen Mary University of London working with 
   <a href="http://eecs.qmul.ac.uk/~coh">Dr. Changjae Oh</a> and 
   <a href="https://people.epfl.ch/andrea.cavallaro?lang=en">Prof. Andrea Cavallaro</a> 
   on hand-object reconstruction from images and human-to-robot handover. I received an MSc in Artificial Intelligence from Queen Mary University of London and a BSc in Physics from Imperial College London.
@@ -17,7 +17,7 @@ redirect_from:
 
 <h2>News</h2>
 <ul>
-  <li>[04/25] Started as a research assistant at Queen Mary University of London</li>
+  <li>[04/25] Started as a research assistant at Queen Mary University of London working on VLM based referring expression segmenation</li>
   <li>[03/25] PhD viva passed with minor corrections</li>
   <li>[06/23] Started a 6-months research internship at Idiap Research Institute, Switzerland</li>
   <li>[04/20] Started as a PhD student at Queen Mary University of London</li>
