Update link to Neuracore

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -8,7 +8,7 @@ redirect_from:
 ---
 
 <p>
-  I am a Robot Learning Engineer at Neuracore. Previously, I was a PhD student at Queen Mary University of London working with 
+  I am a Robot Learning Engineer at <a href="https://www.neuracore.app/">Neuracore</a>. Previously, I was a PhD student at Queen Mary University of London working with 
   <a href="http://eecs.qmul.ac.uk/~coh">Dr. Changjae Oh</a> and 
   <a href="https://people.epfl.ch/andrea.cavallaro?lang=en">Prof. Andrea Cavallaro</a> 
   on hand-object reconstruction from images and human-to-robot handover. I received an MSc in Artificial Intelligence from Queen Mary University of London and a BSc in Physics from Imperial College London.
